--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,7 @@ version: 2
 updates:
   - package-ecosystem: gomod
     directory: "/"
-    target-branch: master
+    target-branch: main
     schedule:
       interval: daily
       time: '07:00'
