--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
     open-pull-requests-limit: 99
   - package-ecosystem: github-actions
     directory: "/"
-    target-branch: master
+    target-branch: main
     schedule:
       interval: daily
       time: '07:00'
